# subscribe

./: .gitignore  BACKLOG.md  CLAUDE.md  DESIGN.md  README.md  config.yaml.example  pyproject.toml  requirements-align.txt  requirements-gpu.txt  requirements-soundevents.txt  start.bat  start_api.bat  start_ui.bat  ui.py
api/: models.py  server.py
api/routes/: batch.py  export.py  health.py  models.py  stats.py  transcribe.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.module.css  i18n.js  index.css  useSessionStore.js
frontend/src/components/: CueEditor.jsx  CueEditor.module.css  DropZone.jsx  DropZone.module.css  Player.jsx  Player.module.css  ProgressLog.jsx  ProgressLog.module.css  ResultPanel.jsx  ResultPanel.module.css  Settings.jsx  Settings.module.css  StatsBar.jsx  StatsBar.module.css
subscribe/: align.py  audio_extract.py  cli.py  config.py  models.py  sound_events.py  transcribe.py
subscribe/export/: json_export.py  srt.py  vtt.py
subscribe/utils/: device.py  logging.py
tests/: test_align.py  test_audio_extract.py  test_device.py  test_export_endpoint.py  test_export_json.py  test_export_srt.py  test_transcribe_params.py
