[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "subscribe"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "faster-whisper>=1.0",
    "streamlit>=1.30",
]

[project.scripts]
subscribe = "subscribe.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["subscribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
